# salatui

./: Cargo.toml  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-prayer-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-clock-display/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-notifications/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/quick/1-create-a-readme-for-the-project-preparin/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-fix-pre-alert-notification-bug-and-sched/: 2-PLAN.md  2-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
aur/: .SRCINFO  PKGBUILD
src/: app.rs  cli.rs  config.rs  digits.rs  main.rs  notification.rs  prayer.rs  tui.rs  ui.rs
