[package]
name = "tui-adhan"
version = "0.1.0"
edition = "2024"

[dependencies]
salah = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
hijri_date = "0.5.1"
ratatui = "0.30.0"
